<resources>
    <string name="app_name">Robot Hotel</string>
    <string name="welcome">Welcome at the Robot Hotel!</string>
    <string name="welcome_short">Welcome</string>
    <string name="enter_name">Please enter your name and surname:</string>
    <string name="select_action">Select an action</string>
    <string name="checkin">Check In</string>
    <string name="checkout">Check Out</string>
    <string name="book">Book</string>
    <string name="map">Map</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="ok">OK</string>
    <string name="simulate">Simulate human arrival</string>

    <string name="days">Number of days</string>
    <string name="days_hint">3</string>


    <string name="single_room">Single</string>
    <string name="double_room">Double</string>
    <string name="deluxe_room">Deluxe</string>

    <string name="single_room_price">5€</string>
    <string name="double_room_price">10€</string>
    <string name="deluxe_room_price">50€</string>

    <string name="pepper_disengage">See you soon!</string>
    <string name="pepper_welcome">Hello, I am Pepper the Receptionist!</string>
    <string name="pepper_entername"> Please enter
    your name and surname on the tablet!</string>
    <string name="pepper_info">We are Italy\'s finest fully
    automated hotel. Given the current COVID pandemic, our hotel maximizes the safety of
    the guests by minimizing human interactions.</string>
    <string name="pepper_action_checkin">Well %1$s, it seems like you have an active booking for today.
        You can checkin or ask me other information! </string>
    <string name="pepper_action_checkout">%1$s, we hope that you are enjoying your stay at our hotel.
        You can checkout or ask me other information! </string>
    <string name="pepper_action_book">%1$s, it seems that you don\'t have a booking for today. You can
        book right now. If we have free rooms we can accommodate you! Otherwise you can ask
    me other questions.</string>
    <string name="pepper_checkin_1">You have a booking for room %1$s, that is a %2$s room.</string>
    <string name="pepper_checkin_2">To reach your room, take the corridor on the %1$s. Then your room
    is the %2$s along the corridor on the %3$s side. I can show you this map again if you like.
    </string>
    <string name="pepper_checkin_3">
            Let me give you the key now!.
    </string>

    <string name="pepper_action_help1">
            What else can I do for you %1$s?
    </string>

    <string name="pepper_action_help2">
            Anything else %1$s?
    </string>

    <string name="pepper_action_help3">
            Would you like to know something else %1$s?
    </string>

    <string name="pepper_checkin_fail">Sorry but you cannot checkin because you haven\'t booked for
        today! Anything else I can do for you?
    </string>
    <string name="pepper_checkout_fail">Sorry but you cannot checkout since you have not
        performed the checkin or you haven\'t booked already. Can I help you with something else?
    </string>
    <string name="pepper_book_fail">You cannot book right now since you are staying at the hotel
        right now. Anything else I can do for you?
    </string>

    <string name="pepper_map_1">This is the map of the hotel.</string>
    <string name="pepper_map_2">To reach your room, take the corridor on the %1$s. Then your room
    is the %2$s along the corridor on the %3$s side.
    </string>

    <string name="pepper_stats">We have %1$s rooms: %2$s are single,
        %3$s are double and %4$s are deluxe. %5$s out of %1$s rooms are taken right now.</string>

    <string name="pepper_map_confirm">When you have finished to view the map, say OK!</string>

    <string name="pepper_book_description">I have searched for free rooms in our hotel. The
        type of rooms listed in blue are available. Please tell me the one you prefer
        and the number of nights do you want to stay. When you have chosen, please confirm, otherwise
        i can cancel the booking.
    </string>

    <string name="pepper_book_aggreement1">Perfect!
    </string>

    <string name="pepper_book_aggreement2">All right!
    </string>

    <string name="pepper_book_aggreement3">Excellent!
    </string>

    <string name="pepper_book_unavailable">That type of room is unavailable, unfortunately. Please, choose
        among the others!
    </string>

    <string name="pepper_book_number_not_understand">I cannot understand that number! Can you repeat?
    </string>

    <string name="pepper_book_incomplete">You haven\'t specified all the required informations!
        Please tell them to me!
    </string>

    <string name="thankyou">Thank you!
    </string>

    <string name="pepper_checkout1">Thanks for choosing our hotel! I take the key please. The
        payment procedure is automatic!
    </string>

</resources>