<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.action.ActionActivity">
    <!-- app:cardBackgroundColor="@color/colorPrimaryDark" -->

<!--        android:foreground="?android:selectableItemBackground" -->

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/card2"
        app:layout_constraintEnd_toStartOf="@+id/card2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card2">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_room_single_gray" />

    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_room"
        android:layout_marginBottom="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/card1"
        app:layout_constraintEnd_toEndOf="@+id/card1"
        app:layout_constraintStart_toStartOf="@+id/card1" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_room_price"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/card1"
        app:layout_constraintStart_toStartOf="@+id/card1"
        app:layout_constraintTop_toBottomOf="@+id/card1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editDaysNumber"
        app:layout_constraintEnd_toStartOf="@+id/card3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_room_double_gray" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/double_room"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/card2"
        app:layout_constraintEnd_toEndOf="@+id/card2"
        app:layout_constraintStart_toStartOf="@+id/card2" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/double_room_price"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/card2"
        app:layout_constraintStart_toStartOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@+id/card2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/card2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card2"
        app:layout_constraintTop_toTopOf="@+id/card2">

        <ImageView
            android:id="@+id/image3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_room_deluxe_gray" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deluxe_room"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/card3"
        app:layout_constraintEnd_toEndOf="@+id/card3"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/card3" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deluxe_room_price"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/card3"
        app:layout_constraintStart_toStartOf="@+id/card3"
        app:layout_constraintTop_toBottomOf="@+id/card3" />


    <TextView
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        app:layout_constraintBottom_toTopOf="@+id/editDaysNumber"
        app:layout_constraintEnd_toEndOf="@+id/editDaysNumber"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/editDaysNumber" />

    <EditText
        android:id="@+id/editDaysNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/days_hint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card2" />


</androidx.constraintlayout.widget.ConstraintLayout>